# SteamAudioDLL

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  NVGT_LICENSE.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/: audio_mixer.h  audio_processor.h  c_interface.h  direct_effect.h  direct_simulator.h  geometry_scene.h  phonon_wrapper.h  reflection_effect.h  room_reverb.h
python/: interactive_3d.py  interactive_3d_lib.py
python-steamaudio/: API.md  MANIFEST.in  PACKAGING.md  README.md  pyproject.toml  run_tests.py  setup.py
python-steamaudio/steamaudio/: __init__.py  nuitka_config.py
python-steamaudio/steamaudio/bindings/: __init__.py  ctypes_bindings.py  loader.py
python-steamaudio/steamaudio/bindings/dll/: __init__.py  phonon.def  phonon.lib
python-steamaudio/steamaudio/core/: __init__.py  context.py  exceptions.py
python-steamaudio/steamaudio/effects/: __init__.py  direct_effect.py  reflection_effect.py  room_reverb.py
python-steamaudio/steamaudio/environment/: __init__.py  audio_environment.py
python-steamaudio/steamaudio/hooks/: __init__.py  hook-steamaudio.py
python-steamaudio/steamaudio/processor/: __init__.py  audio_mixer.py  audio_processor.py
python-steamaudio/steamaudio/scene/: __init__.py  geometry_scene.py
python-steamaudio/steamaudio/simulation/: __init__.py  direct_simulator.py
python-steamaudio/steamaudio/spatial/: __init__.py  spatialization.py  vector3.py
python-steamaudio/tests/: __init__.py  conftest.py  test_basic.py  test_effects.py  test_environment.py  test_geometry.py  test_integration.py  test_mixer.py  test_performance.py  test_processor.py  test_real_library.py
src/: audio_mixer.cpp  audio_processor.cpp  c_interface.cpp  direct_effect.cpp  direct_simulator.cpp  geometry_scene.cpp  phonon_wrapper.cpp  reflection_effect.cpp  room_reverb.cpp
steamaudio/doc/: genindex.html  objects.inv  scene.html  searchindex.js
