[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steamaudio"
version = "1.1.0"
description = "Python bindings for Steam Audio - 3D audio spatialization library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Steam Audio Contributors"}
]
keywords = ["audio", "3d", "spatialization", "steam-audio", "phonon"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
]
audio = [
    "soundfile>=0.10.0",
    "pyaudio>=0.2.11",
]

[project.urls]
Homepage = "https://github.com/wangru2025/SteamAudioDLL"
Documentation = "https://github.com/wangru2025/SteamAudioDLL"
Repository = "https://github.com/wangru2025/SteamAudioDLL.git"
Issues = "https://github.com/wangru2025/SteamAudioDLL/issues"

[tool.setuptools.packages.find]
include = ["steamaudio*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=steamaudio --cov-report=html"
